--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,4 +1,22 @@
-<%= form_for @movie, url: movies_path, html: { multipart: true } do |form| %>
-  <%= form.file_field :media_file %>
-  <%= form.submit %>
-<% end %>
+<div class="row">
+  <div class="col-xs-12">
+  <h1>Upload a Movie</h1>
+  </div>
+
+  <div class="col-xs-12">
+    <div class="well">
+      <%= form_for @movie, url: movies_path, html: { multipart: true } do |form| %>
+        <div class="form-group">
+          <label for="movie">Use the form below to upload a movie</label>
+          <%= form.file_field :media_file %>
+        </div>
+        <%= form.submit value:"Upload", class: "btn bt-default" %>
+      <% end %>
+    </div>
+  </div>
+
+  <div class="col-xs-12">
+    <p><%= link_to "Go back", movies_path %></p>
+  </div>
+
+</div>
