--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,5 +1,6 @@
+<br/>
 <div align="center">
-<video controls>
+<video controls id="movie">
 
   <source src="<%= @movie.media_file.url %>" type="<%= @movie.media_file.content_type %>" />
 
@@ -22,5 +23,24 @@
 
   dispatcher.bind('youare', function(data) {
     console.log('You are ' + data);
+  });
+
+  var control_channel = dispatcher.subscribe('<%= @movie.media_file_file_name %>');
+  var video = document.getElementById("movie");
+
+  control_channel.bind('play', function(data) {
+    video.play();
+  });
+  control_channel.bind('pause', function(data) {
+    video.pause();
+  });
+  control_channel.bind('stop', function(data) {
+    video.currentTime = 0;
+  });
+  control_channel.bind('fastforward', function(data) {
+    video.currentTime += 4;
+  });
+  control_channel.bind('rewind', function(data) {
+    video.currentTime -= 4;
   });
 </script>
