--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -26,24 +26,10 @@
 <div class="well">
   <% @movies.each do |movie| %>
     <div class="row">
-      <div class="col-xs-6"><%= movie.media_file_file_name %></div>
+      <div class="col-xs-4"><%= movie.media_file_file_name %></div>
       <div class="col-xs-3"><%= link_to "Watch Movie", movie_path(movie) %></div>
-      <div class="col-xs-3"><%= link_to "Delete Movie", movie_path(movie), method: :delete %></div>
+      <div class="col-xs-3"><%= link_to "Control Movie", remote_control_path(movie_name: movie.media_file_file_name) %></div>
+      <div class="col-xs-2"><%= link_to "Delete Movie", movie_path(movie), method: :delete %></div>
     </div>
   <% end %>
 </div>
-
-<script>
-  var dispatcher = new WebSocketRails('localhost:3000/websocket');
-
-  dispatcher.on_open = function(data) {
-    console.log('Connection has been established: ', data);
-    // You can trigger new server events inside this callback if you wish.
-  }
-
-  dispatcher.trigger('whoami',"finding myself");
-
-  dispatcher.bind('youare', function(data) {
-    console.log('You are ' + data);
-  });
-</script>
