--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -12,7 +12,7 @@
 </div>
 
 <script>
-  var dispatcher = new WebSocketRails('localhost:3000/websocket');
+  var dispatcher = new WebSocketRails(location.host+'/websocket');
 
   dispatcher.on_open = function(data) {
     console.log('Connection has been established: ', data);
@@ -35,6 +35,7 @@
     video.pause();
   });
   control_channel.bind('stop', function(data) {
+    video.pause();
     video.currentTime = 0;
   });
   control_channel.bind('fastforward', function(data) {
